--- a/index.html
+++ b/index.html
@@ -1,45 +1,85 @@
 <!-- Replin Patryk - 4/12/2024 -->
 
 <html>
-    <head>
-        <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
-    </head>
-    <body>
-        <table width=95% border="1" align="center">
-         <tr>
-            <td width=18% align=center>
-                <marquee bgcolor="pink">Replin</marquee>
-                <a href="zadanie2_replin.html" target="strony">Zadanie 2</a><br>
-                <a href="zadanie3_replin.html" target="strony">Zadanie 3</a><br>
-                <a href="zadanie4_replin.html" target="strony">Zadanie 4</a><br>
-                <a href="repl_z5_1.html" target="strony">Zadanie 5 - importowany</a><br>
-                <a href="repl_z5_2.html" target="strony">Zadanie 5 - zewnetrzny</a><br>
-                <a href="repl_z5_3.html" target="strony">Zadanie 5 - wewnetrzny</a><br>
-                <a href="repl_z5_4.html" target="strony">Zadanie 5 - liniowy</a><br>
-                <a href="zadanie6_replin.html" target="strony">Zadanie 6</a><br>
-                <a href="zadanie7_replin.html" target="strony">Zadanie 7</a><br>
-                <a href="zadanie8_replin.html" target="strony">Zadanie 8</a><br>
-                <a href="zadanie9_replin.html" target="strony">Zadanie 9</a><br>
-                <a href="zadanie10_replin.html" target="strony">Zadanie 10</a><br>
-                <a href="zadanie11_replin.html" target="strony">Zadanie 11</a><br>
-                <a href="zadanie12_replin.html" target="strony">Zadanie 12</a><br>
-                <a href="zadanie13_repl.html" target="strony">Zadanie 13</a><br>
-                <a href="zadanie14_replin.html" target="strony">Zadanie 14</a><br>
-                <a href="zadanie15_repl.html" target="strony">Zadanie 15</a><br>
-            </td>
-            <td align=center><iframe width=800 height=650 name="strony" src="start.html" border="0"></iframe>
-            </td>
-            <td width=18% align=center>
-                <a href="start.html" target="strony">Start</a><br>
-                <a href="kod_z5_1_replin.html" target="strony">z5 kod - importowany</a><br>
-                <a href="kod_z5_2_replin.html" target="strony">z5 kod - zewnetrzny</a><br>
-                <a href="kod_z5_3_replin.html" target="strony">z5 kod - wewnetrzny</a><br>
-                <a href="kod_z5_4_replin.html" target="strony">z5 kod - liniowy</a><br>
-                <a href="kod_z6_replin.html" target="strony">z6 kod</a><br>
-                <a href="kod_z13_replin.html" target="strony">z13 kod</a><br>
-                <a href="kod_z15_replin.html" target="strony">z15 kod</a><br>
-            </td>
-          </tr>
-        </table>
-    </body>
+  <head>
+    <meta http-equiv="content-type" content="text/html; CHARSET=iso-8859-2" />
+  </head>
+  <body>
+    <table width="95%" border="1" align="center">
+      <tr>
+        <td width="18%" align="center">
+          <marquee bgcolor="pink">Replin</marquee>
+          <a href="zadanie2_replin.html" target="strony">Zadanie 2</a><br />
+          <a href="zadanie3_replin.html" target="strony">Zadanie 3</a><br />
+          <a href="zadanie4_replin.html" target="strony">Zadanie 4</a><br />
+          <a href="repl_z5_1.html" target="strony">Zadanie 5 - importowany</a
+          ><br />
+          <a href="repl_z5_2.html" target="strony">Zadanie 5 - zewnetrzny</a
+          ><br />
+          <a href="repl_z5_3.html" target="strony">Zadanie 5 - wewnetrzny</a
+          ><br />
+          <a href="repl_z5_4.html" target="strony">Zadanie 5 - liniowy</a><br />
+          <a href="zadanie6_replin.html" target="strony">Zadanie 6</a><br />
+          <a href="zadanie7_replin.html" target="strony">Zadanie 7</a><br />
+          <a href="zadanie8_replin.html" target="strony">Zadanie 8</a><br />
+          <a href="zadanie9_replin.html" target="strony">Zadanie 9</a><br />
+          <a href="zadanie10_replin.html" target="strony">Zadanie 10</a><br />
+          <a href="zadanie11_replin.html" target="strony">Zadanie 11</a><br />
+          <a href="zadanie12_replin.html" target="strony">Zadanie 12</a><br />
+          <a href="zadanie13_repl.html" target="strony">Zadanie 13</a><br />
+          <a href="zadanie14_replin.html" target="strony">Zadanie 14</a><br />
+          <a href="zadanie15_repl.html" target="strony">Zadanie 15</a><br />
+          <a href="zadanie16_repl.html" target="strony">Zadanie 16</a><br />
+          <a href="zadanie17_p1_repl.html" target="strony">Zadanie 17_p1</a
+          ><br />
+          <a href="zadanie17_p2_repl.html" target="strony">Zadanie 17_p2</a
+          ><br />
+          <a href="zadanie18_repl.html" target="strony">Zadanie 18</a><br />
+          <a href="zadanie19_repl.html" target="strony">Zadanie 19</a><br />
+          <a href="zadanie20_repl.html" target="strony">Zadanie 20</a><br />
+          <a href="zadanie21_repl.html" target="strony">Zadanie 21</a><br />
+          <a href="zadanie22_repl.html" target="strony">Zadanie 22</a><br />
+          <a href="zadanie23_repl.html" target="strony">Zadanie 23</a><br />
+          <a href="zadanie32_repl.html" target="strony">Zadanie 32</a><br />
+          <a href="zadanie33_repl.html" target="strony">Zadanie 33</a><br />
+          <a href="zadanie34_repl.html" target="strony">Zadanie 34</a><br />
+          <a href="zadanie35_repl.html" target="strony">Zadanie 35</a><br />
+          <a href="zadanie36_repl.html" target="strony">Zadanie 36</a><br />
+        </td>
+        <td align="center">
+          <iframe
+            width="800"
+            height="650"
+            name="strony"
+            src="start.html"
+            border="0"
+          ></iframe>
+        </td>
+        <td width="18%" align="center">
+          <a href="start.html" target="strony">Start</a><br />
+          <a href="kod_z5_1_replin.html" target="strony">z5 kod - importowany</a
+          ><br />
+          <a href="kod_z5_2_replin.html" target="strony">z5 kod - zewnetrzny</a
+          ><br />
+          <a href="kod_z5_3_replin.html" target="strony">z5 kod - wewnetrzny</a
+          ><br />
+          <a href="kod_z5_4_replin.html" target="strony">z5 kod - liniowy</a
+          ><br />
+          <a href="kod_z6_replin.html" target="strony">z6 kod</a><br />
+          <a href="kod_z13_replin.html" target="strony">z13 kod</a><br />
+          <a href="kod_z15_replin.html" target="strony">z15 kod</a><br />
+          <a href="kod_z17_p1_repl.html" target="strony">z17_p1 kod</a><br />
+          <a href="kod_z17_p2_repl.html" target="strony">z17_p2 kod</a><br />
+          <a href="kod_z18_repl.html" target="strony">z18 kod</a><br />
+          <a href="kod_z19_repl.html" target="strony">z19 kod</a><br />
+          <a href="kod_z20_repl.html" target="strony">z20 kod</a><br />
+          <a href="kod_z22_repl.html" target="strony">z22 kod</a><br />
+          <a href="kod_z23_repl.html" target="strony">z23 kod</a><br />
+          <a href="kod_z33_repl.html" target="strony">z33 kod</a><br />
+          <a href="kod_z34_repl.html" target="strony">z34 kod</a><br />
+          <a href="kod_z36_repl.html" target="strony">z36 kod</a><br />
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
